# phd-scripts

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml  requirements.txt  template.parameter_pack.yml
doc/: conf.py  index.rst
doc/modules/: _public.rst
doc/setup/: install.rst
phdscripts/: __init__.py  parameter_pack.py  physical_constants.py  scan.py  util.py  validate.py
phdscripts/boundary/: __init__.py  extrude.py  extrude_normal.py  extrude_scale.py  fluxsurface.py  fourier_decomp.py  freidberg_cerfon.py  geqdsk.py  miller.py  print.py  reorder_ordered.py
phdscripts/convert/: __init__.py  add_cold_jorek_boundary.py  elite_to_jorek.py  jorek_to_helena.py  profile_points.py
phdscripts/data/: __init__.py  boundary.py  fluxsurface.py  geqdsk.py
phdscripts/input/: __init__.py
phdscripts/input/reader/: __init__.py  elite.py  geqdsk.py  jorek.py
phdscripts/input/reader/jorek/: __init__.py  __input__.py  equilibrium.py  input_profiles.py  namelist.py  output.py  profile.py
phdscripts/input/writer/: __init__.py  helena.py  jorek.py  starwall.py
phdscripts/math/: __init__.py  extrapolate.py  interpolate.py  jorek.py  lerp.py
phdscripts/parameter_pack/: __init__.py  builder.py  io.py  parameter_pack.py
phdscripts/plotters/: __init__.py  geqdsk.py  profiles.py  scatter_2d.py
phdscripts/scheduler/: __init__.py  driver.py  register.py
phdscripts/scheduler/local/: __init__.py  driver.py
phdscripts/scheduler/slurm/: __init__.py  driver.py
phdscripts/util/: __init__.py  conversion.py  string.py
phdscripts/workflow/: __init__.py  workflow.py
phdscripts/workflow/jorek/: __init__.py  basic_workflow.py  staged_workflow.py  starwall_invariants.py  workflow.py
phdscripts/workflow/jorek/input_file/: __init__.py  jorek.py  starwall.py
phdscripts/workflow/jorek/job_script/: __init__.py  driver.py  starwall.py
phdscripts/workflow/jorek/job_script/csd3/: jorek.py  starwall.py
phdscripts/workflow/mishka/: __init__.py  workflow.py
phdscripts/workflow/mishka/job_script/: __init__.py  mishka.py
phdscripts/workflow/scene/: __init__.py  workflow.py
phdscripts/workflow/scene/job_script/: __init__.py  scene.py
phdscripts/workflows/: __init__.py  register.py  workflow.py
phdscripts/workflows/jorek/: __init__.py  fixed_boundary.py  free_boundary.py  plot.py  resume_sim.py  workflow.py
