[tool.poetry]
name = "phdscripts"
version = "0.0.1"
description = "Scripts I am using in my PhD."
authors = ["Matthew Marshall <matthew.marshall@stfc.ac.uk>"]
license = "MIT license"
homepage = "https://github.com/SamThePsychoticLeprechaun/phd-scripts"

[tool.poetry.dependencies]
python = "~3.9"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
pyyaml = "^6.0.1"
regex = "^2021.11.10"
f90nml = "^1.4.3"
scipy = "^1.11.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"
hooks = {git = "https://github.com/stfc/pre-commit-hooks", tag = "v0.3.5"}
pylint = "^2.11.1"
mypy = "^1.1.1"
mypy-extensions = "^1.0.0"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "numpy",
    "toml",
    ]

ignore_missing_imports = true

[tool.pylint.master]
persistent="yes"

[tool.pylint.messages_control]
max-line-length = 88
disable = ["wrong-hanging-indentation", "bad-whitespace",]
output-format = "colorized"

[tool.pylint.basic]
good-names = ["i", "j", "k", "e", "df", "n", "t",]

[tool.isort]
profile = "black"
skip = ["build_seq.py", "conf.py"]
float_to_top = true

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
envlist = py36
"""

[tool.poetry-dynamic-versioning]
enable = true
